--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "pg": "^8.6.0",
     "typescript": "^4.3.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/pg": "^8.6.0",
     "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6"
   }
